# phosphor-virtual-sensor

./: .clang-tidy  0001-Add-a-units-and-objPath-member-to-the-sensor-class.patch  0002-Add-structured-logging-for-threshold-events.patch  MAINTAINERS  OWNERS  README.md  calculate.cpp  calculate.hpp  dbusSensor.cpp  dbusSensor.hpp  dbusUtils.cpp  dbusUtils.hpp  exprtkTools.hpp  foo.cpp  groups  meson.build  meson_options.txt  phosphor-virtual-sensor.service  phosphor-virtual-sensor.service.in  project.config  sensor.hpp  thresholds.hpp  virtualSensor.cpp  virtualSensor.hpp  virtual_sensor_config.json
src/: calculate.cpp  dbusSensor.cpp  dbusSensor.hpp  dbusUtils.cpp  dbusUtils.hpp  exprtkTools.hpp  main.cpp  meson.build  thresholds.hpp  virtualSensor.cpp  virtualSensor.hpp
subprojects/: cereal.wrap  exprtk.wrap  function2.wrap  span-lite.wrap  stdplus.wrap
test/: meson.build  test_exprtk_tools.cpp
